HTMLIZ-327-346-347 fix alignment for lesson 05 and 09

--- a/op-meetings/lesson-05/main.scss
+++ b/op-meetings/lesson-05/main.scss
@@ -3,3 +3,13 @@
 .biz-tip-content {
   margin-top: clamp(95px, 18%, 160px) !important;
 }
+
+.try-content {
+  p {
+    line-height: 0.4em !important;
+    margin-bottom: clamp(5px, 1vw, 7px);
+  }
+  .second {
+    margin-left: 5px;
+  }
+}
