--- a/op-meetings/lesson-09/main.scss
+++ b/op-meetings/lesson-09/main.scss
@@ -1,1 +1,7 @@
 @import '../../css/_op-meetings-utils.scss';
+
+.see-table-content {
+  ol.numbers {
+    padding-left: 7px !important;
+  }
+}
